--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
+    "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
